# bootdev_staticsite

./: README.md  build.sh  pyproject.toml
content/: index.md
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
public/blog/glorfindel/: index.html
public/blog/majesty/: index.html
public/blog/tom/: index.html
public/contact/: index.html
src/: #test_htmlnode.py#  .#test_htmlnode.py  block_conversions.py  block_conversions.py~  htmlnode.py  htmlnode.py~  inline_conversions.py  main.py  main.py~  markdown_to_html.py  test_block_conversions.py  test_inline_conversions.py  test_markdown_to_html.py  test_nodes.py  test_nodes.py~  textnode.py  textnode.py~
