[project]
name = "bootdev-staticsite"
version = "0.1.0"
description = ""
authors = [
    {name = "kayjay"}
]
license = {text = "The GNU One"}
readme = "README.md"
requires-python = ">=3.13"
package_mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
